[package]
name = "derive-error"
description = "Derive macro for Error using macros 1.1"
version = "0.0.5-pre"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/derive-error"
documentation = "https://docs.rs/derive-error"
readme = "README.md"
keywords = ["error", "derive"]
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
syn = "0.11"
quote = "0.3"
case = "0.1"
#darling = "0.2"

[lib]
proc-macro = true

[dev-dependencies]
rspec = "=1.0.0-beta.4"
